--- a/juplaylist/public/manifest.json
+++ b/juplaylist/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Juplaylist",
+  "name": "Juplaylist - Collaborative Playlist",
   "icons": [
     {
       "src": "favicon.ico",
